# aerial_robot_base

./: .clang-format  .pre-commit-config.yaml  README.md  aerial_robot_base.repos  aerial_robot_humble.repos
aerial_robot_base/: CMakeLists.txt  package.xml  setup.py
aerial_robot_base/aerial_robot_base/: robot_interface.py
aerial_robot_base/launch/: joy_stick_launch.py
aerial_robot_base/scripts/: rms.py  simple_demo.py
aerial_robot_base/src/: aerial_robot_base.cpp
aerial_robot_core/: CMakeLists.txt  package.xml  setup.py
aerial_robot_core/aerial_robot_base/: state_machine.py
aerial_robot_core/aerial_robot_core/: state_machine.py
aerial_robot_core/include/aerial_robot_base/: aerial_robot_base.h
aerial_robot_core/include/aerial_robot_core/: aerial_robot_core.h
aerial_robot_core/scripts/: keyboard_command.py  send_igmp_report.py  simple_demo.py
aerial_robot_core/src/: aerial_robot_base_node.cpp  aerial_robot_core.cpp  aerial_robot_core_node.cpp
aerial_robot_estimation/: CMakeLists.txt  package.xml
aerial_robot_estimation/include/aerial_robot_estimation/: state_estimation.h
aerial_robot_estimation/include/aerial_robot_estimation/sensor/: base_plugin.h  ground_truth.h  imu.h  mocap.h  odom.h  odometry.h
aerial_robot_estimation/plugins/: sensor_plugins.xml
aerial_robot_estimation/src/: state_estimation.cpp
aerial_robot_estimation/src/sensor/: ground_truth.cpp  imu.cpp  mocap.cpp  odom.cpp
aerial_robot_model/: CMakeLists.txt  package.xml
aerial_robot_model/include/aerial_robot_model/: servo_bridge.h
aerial_robot_model/include/aerial_robot_model/model/: aerial_robot_model.h  aerial_robot_model_ros.h  transformable_aerial_robot_model.h
aerial_robot_model/include/aerial_robot_model/model/plugin/: multirotor_robot_model.h  underactuated_tilted_robot_model.h
aerial_robot_model/include/aerial_robot_model/utils/: kdl_utils.h  math_utils.h
aerial_robot_model/launch/: aerial_robot_model_launch.py
aerial_robot_model/plugins/: robot_model_plugins.xml
aerial_robot_model/src/model/base_model/: robot_model.cpp  robot_model_ros.cpp
aerial_robot_model/src/model/plugin/: multirotor_robot_model.cpp  underactuated_tilted_robot_model.cpp
aerial_robot_model/src/model/transformable_model/: jacobians.cpp  kinematics.cpp  robot_model.cpp  stability.cpp  statics.cpp
aerial_robot_model/src/servo_bridge/: servo_bridge.cpp  servo_bridge_node.cpp
aerial_robot_model/src/utils/: interactive_marker_tf_broadcaster.cpp  rotor_tf_publisher.cpp
aerial_robot_model/test/aerial_robot_model/: numerical_jacobians.cpp  numerical_jacobians.h
aerial_robot_msgs/: CMakeLists.txt  package.xml
aerial_robot_msgs/msg/: Acc.msg  AerialRobotStatus.msg  FlightNav.msg  PosVelAcc.msg  PoseControlPid.msg  State.msg  States.msg
aerial_robot_nerve/spinal/: CMakeLists.txt  package.xml
aerial_robot_nerve/spinal/mcu_project/lib/My_Lib/math/: AP_Math.cpp  AP_Math.h  definitions.h  edc.cpp  edc.h  location.cpp  location.h  matrix3.cpp  matrix3.h  matrix_alg.cpp  polygon.cpp  polygon.h  quaternion.cpp  quaternion.h  rotations.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vectorN.h
aerial_robot_nerve/spinal/mcu_project/lib/My_Lib/state_estimate/: state_estimate.h
aerial_robot_nerve/spinal/mcu_project/lib/My_Lib/state_estimate/attitude/: attitude_estimate.h  complementary_ahrs.h  estimator.h  madgwick_ahrs.h
aerial_robot_nerve/spinal/msg/: Barometer.msg  ESCTelemetryArray.msg  Gps.msg  GpsFull.msg  Gyro.msg  Imu.msg  ServoStates.msg  SimpleImu.msg
aerial_robot_simulation/: CMakeLists.txt  aerial_robot_hw_sim_plugins.xml  flight_controllers_plugins.xml  package.xml
aerial_robot_simulation/config/: Gazebo.yaml  fastrtps_profiles.xml
aerial_robot_simulation/gazebo_model/world/: empty.world
aerial_robot_simulation/include/aerial_robot_simulation/: aerial_robot_hw_sim.h  aerial_robot_ign_plugin.h  noise_model.h  rotor_handle.h  simulation_attitude_controller.h  spinal_interface.h
aerial_robot_simulation/launch/: gazebo_launch.py
aerial_robot_simulation/src/: aerial_robot_hw_sim.cpp  aerial_robot_ign_plugin.cpp  sim_param_server.cpp  simulation_attitude_controller.cpp  spinal_interface.cpp
aerial_robot_simulation/xacro/: spinal.gazebo.xacro
robots/hydrus/: CMakeLists.txt  package.xml
robots/hydrus/config/: rviz_config.rviz
robots/hydrus/config/quad/default_mode_201907/: Servo.yaml  StateEstimation.yaml
robots/hydrus/launch/: bringup_launch.py
robots/hydrus/robots/quad/default_mode_201907/: robot.gazebo.xacro  robot.urdf.xacro
robots/hydrus/urdf/: link.urdf.xacro
robots/mini_quadrotor/: CMakeLists.txt  package.xml
robots/mini_quadrotor/config/: Servo.yaml  Simulation.yaml  StateEstimation.yaml  mini_quadrotor.rviz
robots/mini_quadrotor/launch/: bringup_launch.py
robots/mini_quadrotor/urdf/: robot.gazebo.xacro  robot.urdf.xacro
