<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aerial_robot_base</name>
  <version>0.0.0</version>
  <description>ROS2 port of aerial_robot_base package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- <depend>aerial_robot_control</depend> -->
  <!-- <depend>aerial_robot_estimation</depend> -->
  <!-- <depend>aerial_robot_model</depend> -->
  <depend>joy</depend>
  <!-- <depend>jsk_rviz_plugins</depend> -->
  <!-- <depend>mocap_optitrack</depend> -->
  <depend>smach_ros</depend>
  <!-- <depend>smach_viewer</depend> -->
  <!-- <depend>ros_numpy</depend> -->
  <!-- <depend>ublox_gps</depend> -->
  <!-- <depend>ntrip_ros</depend> -->
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>smach</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
