<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aerial_robot_core</name>
  <version>0.0.0</version>
  <description>ROS2 port of aerial_robot_core package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <author email="j-sugihara@dragon.t.u-tokyo.ac.jp">Junichiro Sugihara</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>aerial_robot_model</depend>
  <depend>aerial_robot_estimation</depend>
  <!-- <depend>aerial_robot_control</depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>joy</depend>
  <!-- <depend>mocap_optitrack</depend> -->
  <depend>smach_ros</depend>
  <!-- <depend>smach_viewer</depend> -->
  <!-- <depend>ros_numpy</depend> -->
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>smach</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
