<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aerial_robot_estimation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chou@dragon.t.u-tokyo.ac.jp">chou</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aerial_robot_model</depend>
  <depend>aerial_robot_msgs</depend>
  <depend>geodesy</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kalman_filter</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>spinal</depend>
  <depend>tf2_eigen_kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins/sensor_plugins.xml"/>
  </export>
</package>
