<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aerial_robot_simulation</name>
  <version>0.0.0</version>
  <description>The simulation interface for aerial robot (ROS 2 / Humble port)</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <author email="j-sugihara@dragon.t.u-tokyo.ac.jp">Junichiro Sugihara</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aerial_robot_msgs</depend>
  <depend>spinal</depend>

  <!-- <export> -->
  <!--   <gazebo_ros_control plugin="${prefix}/aerial_robot_hw_sim_plugins.xml"/> -->
  <!--   <controller_interface plugin="${prefix}/flight_controllers_plugins.xml"/> -->
  <!--   <mujoco_ros_control plugin="${prefix}/mujoco_robot_hw_sim_plugin.xml"/> -->
  <!-- </export> -->

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_model"/>
  </export>

</package>
