<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydrus</name>
  <version>0.1.0</version>
  <description>
    URDF model for the hydrus.
  </description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <author email="j-sugihara@dragon.t.u-tokyo.ac.jp">Junichiro Sugihara</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>  
  <depend>aerial_robot_model</depend>
  <depend>aerial_robot_msgs</depend>
  <depend>aerial_robot_simulation</depend>
  <depend>aerial_robot_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
